--- a/crud/index.html
+++ b/crud/index.html
@@ -26,7 +26,7 @@
         }
 
         li {
-            background-color: #eee;
+            background-color: #fff;
             margin-bottom: 5px;
             padding: 10px;
             text-align: center;
@@ -70,7 +70,7 @@
         .report-form button {
             margin-top: 5px;
             padding: 8px 15px;
-            background-color: #4caf50;
+            background-color: #333;
             color: #fff;
             border: none;
             cursor: pointer;
@@ -97,23 +97,6 @@
 
         .report-results tr:nth-child(even) {
             background-color: #f2f2f2;
-        }
-
-        /* Custom Colors */
-        h1 {
-            background-color: #4287f5;
-        }
-
-        li {
-            background-color: #ccc;
-        }
-
-        .report-section {
-            background-color: #e8e8e8;
-        }
-
-        .report-form button {
-            background-color: #4caf50;
         }
     </style>
 </head>
